app/assets/stylesheets/pages/incidents/show.scss
.incident-show {
  &__details.card--incident-details {
    margin-top: 0.5rem;
    background-color: #333333;
    border-radius: 16px;
    font-family: $roboto;

    h1 {
      color: rgb(247, 247, 247);
      font-size: 17px;
      font-family: $roboto;
      font-weight: 400;
    }

    p {
      font-size: 14px;
      color: rgb(223, 223, 223);
      margin-bottom: 0;
      padding-bottom: 0;
    }

    .card--category {
      font-size: 13px;
      color: #8E9398;
      font-family: $roboto;
    }
  }

  // &__map {
  //   // transition: all 0.5s;
  //   // height: 0;
  //   width: 100%;
  //   height: 120px;

  //   // &.open {
  //     // height: 300px;
  //   // }

  //   .mapboxgl-map {
  //     overflow: unset !important;
  //   }

  //   // .mapboxgl-canvas.open {
  //   //   transition: all 0.5s;
  //   // }

  // }

  // &__comments {
  //   max-height: 100%;
  //   height: 100%;
  //   overflow: scroll;
  //   margin-block: 1rem 0.5rem;
  // }
}

